@@ -1,3 +1,9 @@
+2008-10-04  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-treeview.c: 
+	check if folder exists. Patch by Kristian Rumberg.
+	Fixes #554996
+
 2008-10-04  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/baobab-utils.c: small cleanup patch by Kristian Rumberg.
